Fixed scrollbars, etc.

--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #status {
@@ -13,6 +17,8 @@ body {
   top: 0;
   padding: 1em;
   color: #0f0;
+  background: #000;
+  min-width: 1em;
   font-family: monospace;
 }
 
@@ -22,6 +28,7 @@ body {
   bottom: 0;
   padding: 1em;
   color: #0f0;
+  background: #000;
   font-family: monospace;
   min-width: 1em;
 }
